--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,4 +7,15 @@ container h1 {
     font-family: 'Quicksand', sans-serif;
     font-weight: 700;
     font-size: 32px;
+    color: whitesmoke;
+    text-shadow: 1px 1px 5px orangered; 
+}
+
+
+/* Button's Properties */
+.letter {
+    margin: 4px;
+    font-size: 20px;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 500;
 }
