Changed pictures according to lives

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,3 +41,10 @@ h1 {
     text-align: center;
     margin: 0 5px 0 5px;
 }
+
+/* HangMan */
+
+#hangman {
+    width: 450px;
+    height: auto;
+}
